more testing multimachine provisioning with salt and vagrant

--- a/etc/uwsgi.ini
+++ b/etc/uwsgi.ini
@@ -1,32 +1,22 @@
 [uwsgi]
 
-;plugins = http,python
-
 # Set PYTHONHOME
-virtualenv = %d/../venv
+virtualenv = %d/../../venv_production
 
 # Chdir to specified directory before apps loading
-;chdir = %d
+chdir = %d../src
 
 # Load a WSGI module as the application
-module = wsgi:application
+module = artery.wsgi:application
 
 # Logging
 ;logto = %d../var/logs/uwsgi.log
 
 # Socket file
-socket = /tmp/uwsgi_%n.sock
-
-socket = 0.0.0.0:8000
+socket = /tmp/uwsgi_artery.sock
 
 # uWSGI worker processes
 workers = 8
-
-# Set the internal buffer size for uwsgi packet parsing.
-buffer-size = 12288
-
-# Enables HTTP body buffering. uWSGI will save to disk all HTTP bodies larger than the limit specified
-post-buffering = 12288
 
 # Reload workers after the specified amount of managed requests (avoid memory leaks)
 max-requests = 500
