--- a/provisioning/salt/roots/nginx/files/nginx.conf
+++ b/provisioning/salt/roots/nginx/files/nginx.conf
@@ -46,5 +46,6 @@ http {
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
+	include /home/*/*_current/etc/nginx.conf;
 }
 
